create handler biller
